Páginas login y registro creadas

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
               <a href="#" class="iconoRed"><img src="./img/x.png" alt="Publicaciones de la biblioteca en X"></a>
             </div>
             <div class="sesiones">
-              <a href="#"> Iniciar sesión </a>
-              <a href="#"> Registro </a>
+              <a href="./pages/login.html"> Iniciar sesión </a>
+              <a href="./pages/registro.html"> Registro </a>
             </div>
           </div>
 
           <div class="navegacion">
             <div class="logo"><!--  Logo  -->
-              <a href="#">
+              <a href="index.html">
                 <img src="./img/logo.png" alt="Logo de la biblioteca" class="logoImg">
                 <span class="logoTexto">redDocu</span>
               </a>
@@ -41,11 +41,34 @@
             <div>
               <ul class="menu">
                 <li class="itemMenu"><a href="#" class="enlaceMenu"> Inicio </a></li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Biblioteca </a></li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Colecciones </a></li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Publicaciones </a></li>
+                <li class="itemMenu">
+                  <a href="#" class="enlaceMenu"> Biblioteca </a>
+                  <ul class="subMenu">
+                    <li><a class="enlaceSubmenu" href="#"> Nuestra historia</a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Misión </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Visión </a></li>
+                  </ul>
+                </li>
+                <li class="itemMenu"><a href="#" class="enlaceMenu"> Colecciones </a>
+                  <ul class="subMenu">
+                    <li><a class="enlaceSubmenu" href="#"> Colecciones 1 </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Colecciones 2 </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Colecciones 3 </a></li>
+                  </ul>
+                </li>
+                <li class="itemMenu"><a href="#" class="enlaceMenu"> Publicaciones </a>
+                  <ul class="subMenu">
+                    <li><a class="enlaceSubmenu" href="#"> Noticias</a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Eventos </a></li>
+                  </ul>
+                </li>
+                <li class="itemMenu"><a href="#" class="enlaceMenu"> Ayuda </a>
+                  <ul class="subMenu">
+                    <li><a class="enlaceSubmenu" href="#"> Preguntas frecuentes </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Ayuda </a></li>
+                  </ul>
+                </li>
                 <li class="itemMenu"><a href="#" class="enlaceMenu"> Contacto </a></li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Ayuda </a></li>
               </ul>
             </div> <!-- Menú  -->
           </div>
@@ -100,7 +123,52 @@
       </div>
     </div>
 
-    <footer class="piePagina"></footer>
+    <footer class="piePagina">
+      <div class="menuPie">
+        <ul>
+          <li><a class="resaltado" href="index.html"> Inicio </a></li>
+          <li><a href="./pages/login.html"> Iniciar sesión </a></li>
+          <li><a href="./pages/registro.html"> Registro </a></li>
+        </ul>
+  
+        
+        <ul>
+          <li><a class="resaltado" href="#"> Biblioteca </a></li>
+          <li><a href="#"> Nuestra historia </a></li>
+          <li><a href="#"> Misión </a></li>
+          <li><a href="#"> Visión </a></li>
+        </ul>
+  
+        <ul>
+          <li><a class="resaltado" href="#"> Biblioteca </a></li>
+          <li><a href="#"> Colecciones </a></li>
+          <li><a href="#"> - Item - </a></li>
+          <li><a href="#"> - Item - </a></li>
+        </ul>
+        
+        <ul>
+          <li><a class="resaltado" href="#"> Publicaciones </a></li>
+          <li><a href="#"> Noticias </a></li>
+          <li><a href="#"> Eventos </a></li>
+        </ul>
+  
+        <ul>
+          <li><a class="resaltado" href="#"> Contacto </a></li>
+        </ul>
+  
+        <ul>
+          <li><a class="resaltado" href="#"> Ayuda </a></li>
+          <li><a href="#"> Preguntas frecuentes </a></li>
+          <li><a href="#"> - Item - </a></li>
+        </ul>
+      </div>
+
+      <div class="derechos">
+        <p> redDocu - Eduardo López &copy; derechos reservados </p>
+        <p> Tecnología en Análisis y Desarrollo de Software </p>
+        <p> Guayabal 2024 </p>
+      </div>
+    </footer>
 
 
 
