Edición de los enlaces. Creación de historia, misión, visión. Construcción archivo formularios para pagina contacto.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <a href="#" class="iconoRed"><img src="./img/x.png" alt="Publicaciones de la biblioteca en X"></a>
             </div>
             <div class="sesiones">
+              <a href="#"> Administradores </a>
               <a href="./pages/login.html"> Iniciar sesión </a>
               <a href="./pages/registro.html"> Registro </a>
             </div>
@@ -40,35 +41,33 @@
 
             <div>
               <ul class="menu">
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Inicio </a></li>
+                <li class="itemMenu"><a href="index.html" class="enlaceMenu"> Inicio </a></li>
                 <li class="itemMenu">
-                  <a href="#" class="enlaceMenu"> Biblioteca </a>
+                  <a href="./pages/nosotros.html" class="enlaceMenu"> Nosotros </a>
                   <ul class="subMenu">
-                    <li><a class="enlaceSubmenu" href="#"> Nuestra historia</a></li>
-                    <li><a class="enlaceSubmenu" href="#"> Misión </a></li>
-                    <li><a class="enlaceSubmenu" href="#"> Visión </a></li>
+                    <li><a class="enlaceSubmenu" href="./pages/historia.html#mision-vision"> Misión - Visión </a></li>
+                    <li><a class="enlaceSubmenu" href="./pages/historia.html#equipo"> Nuestro equipo </a></li>
                   </ul>
                 </li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Colecciones </a>
+                <li class="itemMenu"><a href="./pages/colecciones.html" class="enlaceMenu"> Colecciones </a>
                   <ul class="subMenu">
-                    <li><a class="enlaceSubmenu" href="#"> Colecciones 1 </a></li>
-                    <li><a class="enlaceSubmenu" href="#"> Colecciones 2 </a></li>
-                    <li><a class="enlaceSubmenu" href="#"> Colecciones 3 </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Partituras </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Libros antiguos </a></li>
+                    <li><a class="enlaceSubmenu" href="#"> Manuscritos </a></li>
                   </ul>
                 </li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Publicaciones </a>
+                <li class="itemMenu"><a href="./pages/publicaciones.html" class="enlaceMenu"> Publicaciones </a>
                   <ul class="subMenu">
-                    <li><a class="enlaceSubmenu" href="#"> Noticias</a></li>
-                    <li><a class="enlaceSubmenu" href="#"> Eventos </a></li>
+                    <li><a class="enlaceSubmenu" href="./pages/noticias.html"> Noticias </a></li>
+                    <li><a class="enlaceSubmenu" href="./pages/eventos.html"> Eventos </a></li>
                   </ul>
                 </li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Ayuda </a>
+                <li class="itemMenu"><a href="./pages/ayuda.html" class="enlaceMenu"> Ayuda </a>
                   <ul class="subMenu">
-                    <li><a class="enlaceSubmenu" href="#"> Preguntas frecuentes </a></li>
-                    <li><a class="enlaceSubmenu" href="#"> Ayuda </a></li>
+                    <li><a class="enlaceSubmenu" href="./pages/preguntas.html"> Preguntas frecuentes </a></li>
                   </ul>
                 </li>
-                <li class="itemMenu"><a href="#" class="enlaceMenu"> Contacto </a></li>
+                <li class="itemMenu"><a href="./pages/contacto.html" class="enlaceMenu"> Contacto </a></li>
               </ul>
             </div> <!-- Menú  -->
           </div>
@@ -129,37 +128,36 @@
           <li><a class="resaltado" href="index.html"> Inicio </a></li>
           <li><a href="./pages/login.html"> Iniciar sesión </a></li>
           <li><a href="./pages/registro.html"> Registro </a></li>
+          <li><a href="#"> Administradores </a></li>
         </ul>
   
         
         <ul>
-          <li><a class="resaltado" href="#"> Biblioteca </a></li>
-          <li><a href="#"> Nuestra historia </a></li>
-          <li><a href="#"> Misión </a></li>
-          <li><a href="#"> Visión </a></li>
+          <li><a class="resaltado" href="./pages/nosotros.html"> Nosotros </a></li>
+          <li><a href="./pages/nosotros.html#vision.vision"> Misión </a></li>
+          <li><a href="./pages/nosotros.html#equipo"> Visión </a></li>
         </ul>
   
         <ul>
-          <li><a class="resaltado" href="#"> Biblioteca </a></li>
-          <li><a href="#"> Colecciones </a></li>
-          <li><a href="#"> - Item - </a></li>
-          <li><a href="#"> - Item - </a></li>
+          <li><a class="resaltado" href="./pages/colecciones.html"> Colecciones </a></li>
+          <li><a href="#"> Partituras </a></li>
+          <li><a href="#"> Libros antiguos </a></li>
+          <li><a href="#"> Manuscritos  </a></li>
         </ul>
         
         <ul>
-          <li><a class="resaltado" href="#"> Publicaciones </a></li>
-          <li><a href="#"> Noticias </a></li>
-          <li><a href="#"> Eventos </a></li>
+          <li><a class="resaltado" href="./pages/publicaciones.html"> Publicaciones </a></li>
+          <li><a href="./pages/noticias.html"> Noticias </a></li>
+          <li><a href="./pages/eventos.html"> Eventos </a></li>
         </ul>
   
         <ul>
-          <li><a class="resaltado" href="#"> Contacto </a></li>
+          <li><a class="resaltado" href="./pages/contacto.html"> Contacto </a></li>
         </ul>
   
         <ul>
-          <li><a class="resaltado" href="#"> Ayuda </a></li>
-          <li><a href="#"> Preguntas frecuentes </a></li>
-          <li><a href="#"> - Item - </a></li>
+          <li><a class="resaltado" href="./pages/ayuda.htlm"> Ayuda </a></li>
+          <li><a href="./pages/preguntas.html"> Preguntas frecuentes </a></li>
         </ul>
       </div>
 
