--- a/pages/registro.html
+++ b/pages/registro.html
@@ -11,66 +11,66 @@
 </head>
 <body>
 
-<div class="contHome">
+  <div class="contenedor">
+    <!--  Inicio navegación  -->
     <header class="encabezado"> 
-    <div class="contNav">
+      <div class="contNav">
 
-      <div class="redesSesiones">
-        <div class="redes">
-          <a href="#" class="iconoRed"><img src="../img/fb.png" alt="Ir a la página de la biblioteca en facebook"></a>
-          <a href="#" class="iconoRed"><img src="../img/yt.png" alt="Ir al canal de la biblioteca en youtube"></a>
-          <a href="#" class="iconoRed"><img src="../img/x.png" alt="Publicaciones de la biblioteca en X"></a>
+        <div class="redesSesiones">
+          <div class="redes">
+            <a href="#" class="iconoRed"><img src="../img/fb.png" alt="Ir a la página de la biblioteca en facebook"></a>
+            <a href="#" class="iconoRed"><img src="../img/yt.png" alt="Ir al canal de la biblioteca en youtube"></a>
+            <a href="#" class="iconoRed"><img src="../img/x.png" alt="Publicaciones de la biblioteca en X"></a>
+          </div>
+          <div class="sesiones">
+            <a href="#"> Administradores </a>
+            <a href="login.html"> Iniciar sesión </a>
+            <a href="registro.html"> Registro </a>
+          </div>
         </div>
-        <div class="sesiones">
-          <a href="login.html"> Iniciar sesión </a>
-          <a href="registro.html"> Registro </a>
+
+        <div class="navegacion">
+          <div class="logo"><!--  Logo  -->
+            <a href="../index.html">
+              <img src="../img/logo.png" alt="Logo de la biblioteca" class="logoImg">
+              <span class="logoTexto">redDocu</span>
+            </a>
+          </div>
+
+          <div>
+            <ul class="menu">
+              <li class="itemMenu"><a href="../index.html" class="enlaceMenu"> Inicio </a></li>
+              <li class="itemMenu">
+                <a href="nosotros.html" class="enlaceMenu"> Nosotros </a>
+                <ul class="subMenu">
+                  <li><a class="enlaceSubmenu" href="nosotros.html#mision-vision"> Misión - Visión </a></li>
+                  <li><a class="enlaceSubmenu" href="nosotros.html#equipo"> Nuestro equipo </a></li>
+                </ul>
+              </li>
+              <li class="itemMenu"><a href="colecciones.html" class="enlaceMenu"> Colecciones </a>
+                <ul class="subMenu">
+                  <li><a class="enlaceSubmenu" href="#"> Partituras </a></li>
+                  <li><a class="enlaceSubmenu" href="#"> Libros antiguos </a></li>
+                  <li><a class="enlaceSubmenu" href="#"> Manuscritos </a></li>
+                </ul>
+              </li>
+              <li class="itemMenu"><a href="publicaciones.html" class="enlaceMenu"> Publicaciones </a>
+                <ul class="subMenu">
+                  <li><a class="enlaceSubmenu" href="noticias.html"> Noticias</a></li>
+                  <li><a class="enlaceSubmenu" href="eventos.html"> Eventos </a></li>
+                </ul>
+              </li>
+              <li class="itemMenu"><a href="ayuda.html" class="enlaceMenu"> Ayuda </a>
+                <ul class="subMenu">
+                  <li><a class="enlaceSubmenu" href="preguntas.html"> Preguntas frecuentes </a></li>
+                </ul>
+              </li>
+              <li class="itemMenu"><a href="contacto.html" class="enlaceMenu"> Contacto </a></li>
+            </ul>
+          </div> <!-- Menú  -->
         </div>
       </div>
-
-      <div class="navegacion">
-        <div class="logo"><!--  Logo  -->
-          <a href="../index.html">
-            <img src="../img/logo.png" alt="Logo de la biblioteca" class="logoImg">
-            <span class="logoTexto">redDocu</span>
-          </a>
-        </div>
-
-        <div>
-          <ul class="menu">
-            <li class="itemMenu"><a href="../index.html" class="enlaceMenu"> Inicio </a></li>
-            <li class="itemMenu">
-              <a href="#" class="enlaceMenu"> Biblioteca </a>
-              <ul class="subMenu">
-                <li><a class="enlaceSubmenu" href="#"> Nuestra historia</a></li>
-                <li><a class="enlaceSubmenu" href="#"> Misión </a></li>
-                <li><a class="enlaceSubmenu" href="#"> Visión </a></li>
-              </ul>
-            </li>
-            <li class="itemMenu"><a href="#" class="enlaceMenu"> Colecciones </a>
-              <ul class="subMenu">
-                <li><a class="enlaceSubmenu" href="#"> Colecciones 1 </a></li>
-                <li><a class="enlaceSubmenu" href="#"> Colecciones 2 </a></li>
-                <li><a class="enlaceSubmenu" href="#"> Colecciones 3 </a></li>
-              </ul>
-            </li>
-            <li class="itemMenu"><a href="#" class="enlaceMenu"> Publicaciones </a>
-              <ul class="subMenu">
-                <li><a class="enlaceSubmenu" href="#"> Noticias</a></li>
-                <li><a class="enlaceSubmenu" href="#"> Eventos </a></li>
-              </ul>
-            </li>
-            <li class="itemMenu"><a href="#" class="enlaceMenu"> Ayuda </a>
-              <ul class="subMenu">
-                <li><a class="enlaceSubmenu" href="#"> Preguntas frecuentes </a></li>
-                <li><a class="enlaceSubmenu" href="#"> Ayuda </a></li>
-              </ul>
-            </li>
-            <li class="itemMenu"><a href="#" class="enlaceMenu"> Contacto </a></li>
-          </ul>
-        </div> <!-- Menú  -->
-      </div>
-    </div>
-  </header>
+    </header>
 </div>
 
   <div class="contLogin">
