--- a/pages/login.html
+++ b/pages/login.html
@@ -4,91 +4,128 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   
-  <link type="text/css" rel="stylesheet" href="../css/loginRegistro.css">
   <link type="text/css" rel="stylesheet" href="../css/header.css">
   <link type="text/css" rel="stylesheet" href="../css/principal.css">
+  <link type="text/css" rel="stylesheet" href="../css/formularios.css">
+
+  <script defer src="../js/redDocu.js"></script>
 <head>
 </head>
-<body>
-  
-  <div class="contenedor">
+<body>  
     <!--  Inicio navegación  -->
-    <header class="encabezado"> 
-      <div class="contNav">
+  <div class="main">
+  
+    <header class="header">
 
-        <div class="redesSesiones">
-          <div class="redes">
-            <a href="#" class="iconoRed"><img src="../img/fb.png" alt="Ir a la página de la biblioteca en facebook"></a>
-            <a href="#" class="iconoRed"><img src="../img/yt.png" alt="Ir al canal de la biblioteca en youtube"></a>
-            <a href="#" class="iconoRed"><img src="../img/x.png" alt="Publicaciones de la biblioteca en X"></a>
-          </div>
-          <div class="sesiones">
-            <a href="#"> Administradores </a>
-            <a href="login.html"> Iniciar sesión </a>
-            <a href="registro.html"> Registro </a>
-          </div>
+      <div class="topBar">
+
+        <div class="social">          
+          <a href="https://www.facebook.com"> <img src="../img/facebook.svg" class="icon" alt=""></a>
+          <a href="https://www.youtube.com"> <img src="../img/youtube.svg" class="icon" alt=""></a>
+          <a href="https://www.whatsapp.com"> <img src="../img/whatsapp.svg" class="icon" alt=""></a>
         </div>
 
-        <div class="navegacion">
-          <div class="logo"><!--  Logo  -->
-            <a href="../index.html">
-              <img src="../img/logo.png" alt="Logo de la biblioteca" class="logoImg">
-              <span class="logoTexto">redDocu</span>
-            </a>
-          </div>
+        <div class="login" id="loginList">
+          <a href="loginAdmin.html"> Administradores </a>
+          <a href="login.html"> Usuarios </a>
+          <a href="registro.html"> Registro </a>          
+        </div>
 
-          <div>
-            <ul class="menu">
-              <li class="itemMenu"><a href="../index.html" class="enlaceMenu"> Inicio </a></li>
-              <li class="itemMenu">
-                <a href="nosotros.html" class="enlaceMenu"> Nosotros </a>
-                <ul class="subMenu">
-                  <li><a class="enlaceSubmenu" href="nosotros.html#mision-vision"> Misión - Visión </a></li>
-                  <li><a class="enlaceSubmenu" href="nosotros.html#equipo"> Nuestro equipo </a></li>
-                </ul>
-              </li>
-              <li class="itemMenu"><a href="colecciones.html" class="enlaceMenu"> Colecciones </a>
-                <ul class="subMenu">
-                  <li><a class="enlaceSubmenu" href="#"> Partituras </a></li>
-                  <li><a class="enlaceSubmenu" href="#"> Libros antiguos </a></li>
-                  <li><a class="enlaceSubmenu" href="#"> Manuscritos </a></li>
-                </ul>
-              </li>
-              <li class="itemMenu"><a href="publicaciones.html" class="enlaceMenu"> Publicaciones </a>
-                <ul class="subMenu">
-                  <li><a class="enlaceSubmenu" href="noticias.html"> Noticias</a></li>
-                  <li><a class="enlaceSubmenu" href="eventos.html"> Eventos </a></li>
-                </ul>
-              </li>
-              <li class="itemMenu"><a href="ayuda.html" class="enlaceMenu"> Ayuda </a>
-                <ul class="subMenu">
-                  <li><a class="enlaceSubmenu" href="preguntas.html"> Preguntas frecuentes </a></li>
-                </ul>
-              </li>
-              <li class="itemMenu"><a href="contacto.html" class="enlaceMenu"> Contacto </a></li>
-            </ul>
-          </div> <!-- Menú  -->
+        <div class="loginIcon" id="loginIcon">
+          <img src="../img/login.svg" class="icon" alt="">
+        </div>
+        
+      </div>
+
+      <div class="navBar">
+
+        
+        <a href="" class="">
+          <div class="contLogo">
+            <img src="../img/book.svg" alt="" class="logo">
+            <h1 class="logoText"> redDocu </h1>
+          </div>
+        </a>
+
+        <nav class="navigation" id="navigation">
+          <ul class="menu">
+            <li class="menuItem"><a href="../index.html" class="menuLink"> Inicio </a></li>
+            <li class="menuItem"><a href="nosotros.html" class="menuLink"> Nosotros </a>
+              <ul class="subMenu">
+                <li><a href="nosotros.html"> Nuestra historia </a></li>
+                <li><a href="nosotros.html#mision-vision"> Misión - Visión </a></li>
+                <li><a href="nosotros.html#equipo"> Nuestro Equipo </a></li>
+              </ul>
+            </li>
+            <li class="menuItem"><a href="colecciones.html" class="menuLink"> Colecciones </a>
+              <ul class="subMenu">
+                <li><a href="#"> Partituras </a></li>
+                <li><a href="#"> Libros antiguos </a></li>
+                <li><a href="#"> Manuscritos </a></li>
+              </ul>            
+            </li>
+            <li class="menuItem"><a href="publicaciones.html" class="menuLink"> Publicaciones </a>
+              <ul class="subMenu">
+                <li><a href="noticias.html"> Noticias </a></li>
+                <li><a href="eventos.html"> Eventos </a></li>
+              </ul>
+            </li>
+            <li class="menuItem"><a href="ayuda.html" class="menuLink"> Ayuda </a>
+              <ul class="subMenu">
+                <li><a href="ayuda.html"> Preguntas frecuentes </a></li>
+                <li><a href="preguntas.html"> Otra ayuda </a></li>
+              </ul>
+            </li>
+            <li class="menuItem"><a href="contacto.html" class="menuLink"> Contacto </a></li>
+          </ul>
+        </nav>        
+
+        <input type="checkbox" name="" id="menu-check">
+        <div class="menuIcon" id="menu-icon">
+          <label for="menu-check">
+            <img src="../img/menu.svg" alt="" id="open-icon">
+            <img src="../img/close.svg" alt="" id="close-icon">
+          </label>
         </div>
       </div>
-    </header>
-</div>
 
-  <div class="contLogin">
-    <div class="ingresar">
-      <form action="">
-        <h3> Iniciar sesión </h3>
-        <input class="campoTexto" type="text" placeholder="Usuario" required>
-        <input class="campoTexto" type="text" placeholder="Contraseña" required>
-        <button> Ingresar </button>
-        <p> ¿Olvidó sus datos? </p>
-        <p><a href="#"> Recuperar contraseña </a></p>
+    </header>  
+  
+
+    <div class="contFormulario">
+      <form action="" class="formulario">
+
+        <h2 class="tituloFormulario"> Iniciar sesión </h2>
+        <div class="formGrupo">
+          <label for="usuario" class="formLabel"> Usuario - Correo registrado </label>
+          <input type="mail" name="" id="usuario" class="campoTexto">
+        </div>
+
+        <div class="formGrupo">  
+          <label for="clave" class="formLabel"> Contraseña </label>
+          <input type="password" name="" id="clave" class="campoTexto" >
+        </div>
+
+        <div class="formGrupo">
+          <span> <a class="formLink" href="#"> ¿Olvidó su contraseña? </a> </span>
+        </div>
+
+        <div class="formGrupo">
+          <button type="submit" class="botonEnviar"> Enviar </button>
+        </div>        
       </form>
-    </div>
 
-    <div class="nuevoAqui">
-      <h3> ¿Nuevo aquí? </h3>
-      <p> Regístrese y haga parte de una inmensa comunidad que está compartiendo conocimiento. </p>
-      <a href="registro.html"><button> Registrarse </button></a>
+      <div class="contInfo">
+        <div class="infoDiv">
+          <h2 class="tituloFormulario"> ¿Aún no tiene una cuenta? </h2>
+          <p class="info"> 
+            Regístrese y haga parte de una inmensa comunidad que está compartiendo conocimiento. 
+          </p>
+          <div class="formGrupo">
+            <a href="registro.html"><button type="button" class="botonSecundario"> Regístrese </button></a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
