index responsive, edición de página nosotros, cambio imagen de fondo

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!--  Fin barra de encabezado  -->
       <div class="contBanner">
         <div class="banner">
-          <h1> Bienvenido a la biblioteca virtual </h1>
+          <h1 class="bienvenido"> <span><em>Bienvenido a</em></span> <span> redDocu </span> </h1>
           <form class="busqueda" action="./pages/resultados.html">
             <input type="search" placeholder="Ingrese términos de búsqueda">
             <button> Buscar </button>
@@ -188,12 +188,6 @@
       </div>
     </footer>
   </div>
-
-
-
-
-    <!-- <a href="https://www.flaticon.com/free-icons/facebook" title="facebook icons">icons created by Freepik - Flaticon</a> -->
-  
  
   </body>
 
