--- a/pages/loginAdmin.html
+++ b/pages/loginAdmin.html
@@ -91,7 +91,7 @@
 
     </header>
     <!--  Fin barra de encabezado  -->
-    <div class="contFormulario contFormularioAdmin">
+    <div class="contFormularioAdmin">
       <form action="" class="formulario">
 
         <h2 class="tituloFormulario textAdmin"> Ingreso Administradores </h2>
@@ -119,7 +119,10 @@
           <h2 class="tituloFormulario"> Información importante administradores </h2>
           <p class="info"> 
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Est officia error, 
-            earum modi eaque quis? 
+            earum modi eaque quis? <br /> <br />
+            
+            Información relevante y actualizada para que los administradores 
+            tengan presente ante de cualquier inicio de sesión. 
           </p>
         </div>
       </div>
