creación página resultados, modificación archivo estilosVarios.css por estilos.css

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,7 @@
     
     <link type="text/css" rel="stylesheet" href="../css/header.css">
     <link type="text/css" rel="stylesheet" href="../css/principal.css">
-    <link type="text/css" rel="stylesheet" href="../css/estilosVarios.css">
+    <link type="text/css" rel="stylesheet" href="../css/estilos.css">
 
     <script defer src="../js/redDocu.js"></script>
   </head>
