Edicion panel usuario

--- a/pages/cuentaUser.html
+++ b/pages/cuentaUser.html
@@ -94,13 +94,33 @@
 
     <div class="accountBar">
       <span> Nombre usuario </span>
-      <span> Foto </span>
-    </div> <!-- dfjdask jjdfk jdklf-->
+      <img src="../img/profile.svg" alt="">
+    </div>
 
     <div class="contAccount">
         <div class="aside">
-            <div> aside 1 </div>
-            <div> aside 2 </div>
+
+            <div>
+              <div class="imgProfile">
+                <img src="../img/profile.svg" alt="">
+                <span><strong>Nombre del usuario</strong> </span>
+                <span>Otro dato del usuario</span>
+              </div>
+
+              <div class="alertIcons">
+                <div><img src="../img/letter.svg" alt=""></div>
+                <div><img src="../img/photo.svg" alt=""></div>
+                <div><img src="../img/bell.svg" alt=""></div>
+              </div>
+
+            </div>
+
+            <div class="sets">
+              <div><a href="#"><img src="../img/profile.svg" alt=""> <span> Perfil </span></a></div>
+              <div><a href="#"><img src="../img/sets.svg" alt=""> <span> Configuración </span></a></div>
+              <div><a href="#"><img src="../img/book.svg" alt=""> <span> Ver libros </span></a></div>              
+              <div><a href="#"><img src="../img/out.svg" alt=""> <span> Salir </span></a></div>
+            </div>
         </div>
         <div class="accountContent">
             <div class="content"> Contenido </div>
