Edición de algunos enlaces y creación de página Preguntas

--- a/pages/cuentaUser.html
+++ b/pages/cuentaUser.html
@@ -12,7 +12,7 @@
     <script defer src="../js/redDocu.js"></script>
 </head>
 <body>
-  <div class="main" style="background-color: #aaa;">
+  <div class="main" style="background-color: #eee;">
 
     <!--  Inicio encabezado  -->
     <header class="header">
@@ -40,7 +40,7 @@
       <div class="navBar"><!--  Inicio barra de navegación  -->
 
         
-        <a href="" class="">
+        <a href="../index.html">
           <div class="contLogo"><!--  Logo  -->
             <img src="../img/book.svg" alt="" class="logo">
             <h1 class="logoText"> redDocu </h1>
@@ -72,8 +72,7 @@
             </li>
             <li class="menuItem"><a href="ayuda.html" class="menuLink"> Ayuda </a>
               <ul class="subMenu">
-                <li><a href="ayuda.html"> Preguntas frecuentes </a></li>
-                <li><a href="preguntas.html"> Otra ayuda </a></li>
+                <li><a href="preguntas.html"> Preguntas frecuentes </a></li>
               </ul>
             </li>
             <li class="menuItem"><a href="contacto.html" class="menuLink"> Contacto </a></li>
@@ -116,13 +115,15 @@
             </div>
 
             <div class="sets">
-              <div><a href="#"><img src="../img/profile.svg" alt=""> <span> Perfil </span></a></div>
-              <div><a href="#"><img src="../img/sets.svg" alt=""> <span> Configuración </span></a></div>
-              <div><a href="#"><img src="../img/book.svg" alt=""> <span> Ver libros </span></a></div>              
-              <div><a href="#"><img src="../img/out.svg" alt=""> <span> Salir </span></a></div>
+              <div><img src="../img/profile.svg" alt=""><a href="#"> <span> Perfil </span></a></div>
+              <div><img src="../img/sets.svg" alt=""><a href="#"> <span> Configuración </span></a></div>
+              <div><img src="../img/book.svg" alt=""><a href="#"> <span> Ver libros </span></a></div>              
+              <div><img src="../img/out.svg" alt=""><a href="#"> <span> Salir </span></a></div>
             </div>
         </div>
         <div class="accountContent">
+            <p><strong> Lorem ipsum dolor sit amet consectetur. </strong></p> 
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, aperiam? </p>
             <div class="content"> Contenido </div>
         </div>
     </div>
