--- a/pages/resultados.html
+++ b/pages/resultados.html
@@ -40,7 +40,7 @@
       <div class="navBar"><!--  Inicio barra de navegación  -->
 
         
-        <a href="" class="">
+        <a href="../index.html">
           <div class="contLogo"><!--  Logo  -->
             <img src="../img/book.svg" alt="" class="logo">
             <h1 class="logoText"> redDocu </h1>
@@ -72,8 +72,7 @@
             </li>
             <li class="menuItem"><a href="ayuda.html" class="menuLink"> Ayuda </a>
               <ul class="subMenu">
-                <li><a href="ayuda.html"> Preguntas frecuentes </a></li>
-                <li><a href="preguntas.html"> Otra ayuda </a></li>
+                <li><a href="preguntas.html"> Preguntas frecuentes </a></li>
               </ul>
             </li>
             <li class="menuItem"><a href="contacto.html" class="menuLink"> Contacto </a></li>
@@ -111,7 +110,7 @@
 
       <div class="singleResult">
         <div class="resultImage">
-          <img src="../img/text.png" alt="">
+          <img src="../img/text.svg" alt="">
         </div>
         <div class="resultDetails">
           <span> Tipo de documento </span>
@@ -130,7 +129,7 @@
 
       <div class="singleResult">
         <div class="resultImage">
-          <img src="../img/audio.png" alt="">
+          <img src="../img/audio.svg" alt="">
         </div>
         <div class="resultDetails">
           <span> Tipo de documento </span>
@@ -149,7 +148,7 @@
 
       <div class="singleResult">
         <div class="resultImage">
-          <img src="../img/video.png" alt="">
+          <img src="../img/video.svg" alt="">
         </div>
         <div class="resultDetails">
           <span> Tipo de documento </span>
@@ -168,7 +167,7 @@
 
       <div class="singleResult">
         <div class="resultImage">
-          <img src="../img/image.png" alt="">
+          <img src="../img/image.svg" alt="">
         </div>
         <div class="resultDetails">
           <span> Tipo de documento </span>
