--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,17 +31,12 @@
           <a href="login.html"> Usuarios </a>
           <a href="registro.html"> Registro </a>          
         </div>
-
-        <div class="loginIcon" id="loginIcon">
-          <img src="../img/login.svg" class="icon" alt="">
-        </div>
         
       </div><!--  Fin barra superior  -->
 
       <div class="navBar"><!--  Inicio barra de navegación  -->
-
         
-        <a href="" class="">
+        <a href="../index.html">
           <div class="contLogo"><!--  Logo  -->
             <img src="../img/book.svg" alt="" class="logo">
             <h1 class="logoText"> redDocu </h1>
@@ -73,8 +68,7 @@
             </li>
             <li class="menuItem"><a href="ayuda.html" class="menuLink"> Ayuda </a>
               <ul class="subMenu">
-                <li><a href="ayuda.html"> Preguntas frecuentes </a></li>
-                <li><a href="preguntas.html"> Otra ayuda </a></li>
+                <li><a href="preguntas.html"> Preguntas frecuentes </a></li>
               </ul>
             </li>
             <li class="menuItem"><a href="contacto.html" class="menuLink"> Contacto </a></li>
