--- a/pages/loginAdmin.html
+++ b/pages/loginAdmin.html
@@ -40,7 +40,7 @@
       <div class="navBar"><!--  Inicio barra de navegación  -->
 
         
-        <a href="" class="">
+        <a href="../index.html">
           <div class="contLogo"><!--  Logo  -->
             <img src="../img/book.svg" alt="" class="logo">
             <h1 class="logoText"> redDocu </h1>
@@ -72,8 +72,7 @@
             </li>
             <li class="menuItem"><a href="ayuda.html" class="menuLink"> Ayuda </a>
               <ul class="subMenu">
-                <li><a href="ayuda.html"> Preguntas frecuentes </a></li>
-                <li><a href="preguntas.html"> Otra ayuda </a></li>
+                <li><a href="preguntas.html"> Preguntas frecuentes </a></li>
               </ul>
             </li>
             <li class="menuItem"><a href="contacto.html" class="menuLink"> Contacto </a></li>
